--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Simple JS App</title>
+    <title>Pokemon App</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
   </head>
   <body>
+    <h1>Pokemon App</h1>
     <script src="js/scripts.js"></script>
   </body>
 </html>
