--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
   </head>
   <body>
-    <h1>Pokemon App</h1>
+    <a class='heading' href="index.html"><h1>Pokemon App</h1></a>
+    <ul class='pokemon-list'></ul>
     <script src="js/scripts.js"></script>
   </body>
 </html>
