--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Pokemon App</title>
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
-  </head>
-  <body>
-    <a class='heading' href="index.html"><h1>Pokemon App</h1></a>
-    <ul class='pokemon-list'></ul>
-    <script src="js/scripts.js"></script>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Pokemon App</title>
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
+</head>
+
+<body>
+  <a class='heading bounceInDown' href="index.html">
+    <h1>Pokemon App</h1>
+  </a>
+  <ul class='pokemon-list'></ul>
+  <script src="js/scripts.js"></script>
+</body>
+
 </html>
