--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
 </head>
 
 <body>
-  <a class='heading bounceInDown' href="index.html">
+  <div class="test animated bounceInDown">
+  <a class='heading' href="index.html">
     <h1>Pokemon App</h1>
   </a>
   <ul class='pokemon-list'></ul>
+  </div>
+  <script src="js/polyfill.min.js"></script>
+  <script src="js/fetch.js"></script>
   <script src="js/scripts.js"></script>
 </body>
 
