--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <nav class="navbar navbar-light" style="background-color: #DAEAF1;">
     <a class="navbar-brand" href="#"><img class="logo" alt="logo" src="images/logo.png"></a>
     <form class="d-flex">
-      <input class="form-control me-2" id="searchBar" type="search" placeholder="Search" aria-label="Search">
+      <input class="form-control me-2" id="searchBar" type="search" placeholder="Search Pokemon..." aria-label="Search">
       <button class="btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button>
     </form>
   </nav>
